<resources>
    <string name="app_name">Cohorts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cohort_label">Cohorts</string>
    <string name="chat_label">Chat</string>
    <string name="files_label">Files</string>
    <string name="help_label">Help</string>
    <string name="settings_label">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="cohort_name">Cohort Name</string>
    <string name="letters_numbers_and_spaces_are_allowed">Letters, numbers and spaces are allowed.</string>
    <string name="description_optional">Description (optional)</string>
    <string name="write_something_about_the_cohort">Write something about the Cohort</string>
    <string name="add_new_cohort">Add New Cohort</string>
    <string name="join">Join</string>
    <string name="add_member">Add Member</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="email_address_hint">abc@gmail.com</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="member_number">Members: %s</string>
    <string name="start_video_call">Start Video Call</string>
    <string name="delete_cohort">Delete Cohort</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="members">Members</string>
    <string name="remove">Remove</string>
    <string name="cohort_info">Cohort Info</string>
    <string name="you">You</string>
    <string name="start_new_chat">Start new chat.</string>
    <string name="new_cohort">New Cohort</string>
    <string name="theme">Theme</string>
    <string name="say_something">Say something...</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="describe_the_task">Describe the task</string>
    <string name="name_the_task">Name the task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="there_are_no_active_tasks">There are no active tasks.</string>
    <string name="clear_completed">Clear Completed</string>
    <string name="clear_all">Clear All</string>
    <string name="new_task">New Task</string>
    <string name="task_detail">Task Detail</string>
    <string name="delete_task">Delete Task</string>
    <string name="a_meeting_is_going_on_in_this_cohort">A meeting is going on in this cohort.</string>
</resources>